# SPECTER

./: .gitignore  LICENSE  NOTICE  README.md  __init__.py  boot.py  http.py  publish.py  pyproject.toml  router.py  setup.py  specter.md
core/: __init__.py  bus.py  cache.py  controller.py  handler.py  lifecycle.py  manager.py  model.py  operation.py  outcome.py  ownership.py  process.py  queue_service.py  registry.py  schema.py  socket_ingress.py  store.py  watcher.py
specter/: __init__.py  http.py
specter/core/: operation.py  outcome.py  ownership.py  queue_service.py  registry.py  schema.py  store.py
