[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specter-runtime"
dynamic = ["version"]
description = "Lifecycle-first backend framework for Flask and gevent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "BleedingXiko" }
]
dependencies = [
  "Flask>=2.0",
  "gevent>=22.0",
  "Flask-SocketIO>=5.0",
]
keywords = ["flask", "gevent", "socketio", "backend", "framework"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Flask",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/BleedingXiko/SPECTER"
Repository = "https://github.com/BleedingXiko/SPECTER"
Documentation = "https://github.com/BleedingXiko/SPECTER/blob/main/specter.md"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "specter.__version__" }

[tool.setuptools.packages.find]
include = ["specter", "specter.*"]
